# tarnished

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.postgres.yml  docker-compose.yml
backend/: DESIGN_GUIDELINES.md  pyproject.toml  seed_rounds.py  test_debug.py  test_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 09c3928e1529_add_original_filename_to_round_media.py  0d7e13252286_add_missing_application_columns.py  1620010fcb40_add_transcript_original_filename.py  20260409_joblead_url_uq.py  20260409_schema_parity.py  20260410_transfer_jobs.py  20260411_job_lead_conversion_fk_name.py  2026_01_27_add_status_order.py  2026_04_09_add_api_key_presets_and_scopes.py  2026_04_09_cleanup_application_reference_data.py  2026_04_09_drop_users_api_token.py  2359baec93ce_add_job_leads_and_user_profiles.py  30e6bafac1f1_add_schema_hygiene_indexes.py  50dd97924e9f_add_audit_log_table.py  823286b57444_seed_history_for_existing_applications.py  913e52a54449_redistribute_rejected_application_.py  a188cbf67b22_add_document_fields.py  a5dc88e4b7b6_add_streak_tracking.py  add_original_filename_to_application.py  add_system_settings.py  fb5feec1a36e_add_missing_extraction_fields_to_.py
backend/app/: main.py
backend/app/api/: admin.py  ai_settings.py  analytics.py  application_history.py  applications.py  auth.py  dashboard.py  export.py  files.py  import.py  import_router.py  insights.py  job_leads.py  profile.py  rounds.py  settings.py  streak.py  user_preferences.py  users.py
backend/app/cli/: auth_storage.py  client.py  main.py  output.py  state.py
backend/app/core/: api_key_scopes.py  config.py  database.py  deps.py  logging_config.py  rate_limit.py  reference_names.py  security.py  seed.py  themes.py
backend/app/lib/: __init__.py  cleanup_orphan_uploads.py  cleanup_transfer_jobs.py  streak.py
backend/app/models/: __init__.py  application.py  audit_log.py  job_lead.py  round.py  round_type.py  status.py  system_settings.py  transfer_job.py  user.py  user_api_key.py
backend/app/schemas/: __init__.py  admin.py  ai_settings.py  analytics.py  api_keys.py  application.py  auth.py  errors.py  import.py  import_schemas.py  job_lead.py  round.py  settings.py  streak.py  user_profile.py
backend/app/services/: __init__.py  ai_settings.py  analytics_queries.py  export_registry.py  export_serializer.py  export_service.py  extraction.py  import_execution.py  import_service.py  import_validation.py  insights.py  job_fetch.py  reference_data.py  storage_cleanup.py  transfer_job_cleanup.py  transfer_jobs.py
backend/tests/: conftest.py  test_analytics_api.py  test_api_endpoints.py  test_api_keys.py  test_auth_whoami.py  test_export.py  test_export_import_roundtrip.py  test_export_jobs.py  test_extraction_service.py  test_files_api.py  test_import.py  test_insights.py  test_job_lead_model.py  test_migration_smoke.py  test_postgres_job_lead_fk_parity.py  test_schema_indexes.py  test_settings.py  test_transfer_jobs.py  test_user_profile_model.py
backend/tests/cli/: conftest.py  test_admin_commands.py  test_analytics_commands.py  test_applications_commands.py  test_auth_commands.py  test_auth_storage.py  test_cli_config.py  test_client.py  test_dashboard_commands.py  test_export_commands.py  test_import_commands.py  test_job_leads_commands.py  test_main.py  test_output_contract.py  test_profile_commands.py  test_round_types_commands.py  test_rounds_commands.py  test_statuses_commands.py  test_user_settings_commands.py
backend/tests/unit/: test_ai_settings_service.py  test_api_boundaries.py  test_chart_cleanup_cronjob.py  test_chart_deployment.py  test_config.py  test_export_registry.py  test_export_serializer.py  test_export_service.py  test_import_execution_service.py  test_import_service.py  test_import_validation_service.py  test_repo_config.py  test_seed.py  test_storage_cleanup_service.py  test_transfer_job_cleanup.py  test_zip_utils.py
cli/: README.md  pyproject.toml
cli/skills/tarnished-cli/: SKILL.md
cli/src/tarnished_cli/: __init__.py  auth_diagnostics.py  auth_storage.py  client.py  config.py  input.py  main.py  output.py  state.py
cli/tests/: test_admin_commands.py  test_analytics_commands.py  test_applications_commands.py  test_auth_commands.py  test_auth_storage.py  test_cli_config.py  test_client.py  test_dashboard_commands.py  test_export_commands.py  test_help_surfaces.py  test_import_commands.py  test_job_leads_commands.py  test_main.py  test_output_contract.py  test_profile_commands.py  test_repo_skill.py  test_round_types_commands.py  test_rounds_commands.py  test_skill_eval_fixture.py  test_statuses_commands.py  test_user_settings_commands.py
documentation/: .gitignore  README.md  docusaurus.config.ts  mkdocs.yml  package.json  pyproject.toml  sidebars.ts
documentation/content/: index.md
documentation/content/contributing/: docs-architecture.md  docs-roadmap.md  docs-style-guide.md  index.md
documentation/content/explanation/: architecture-overview.md  auth-and-api-keys.md  index.md  storage-and-backups.md  transfer-jobs.md
documentation/content/get-started/: create-admin-account.md  create-your-first-api-key.md  create-your-first-application.md  index.md
documentation/content/getting-started/: deploy-with-postgresql-compose.md  index.md  quickstart-docker-compose.md
documentation/content/how-to/: backup-and-restore-tarnished.md  configure-ai-settings.md  configure-api-keys.md  deploy-with-helm.md  import-and-export-data.md  index.md  upgrade-tarnished.md  use-the-browser-extension.md  use-the-cli.md
documentation/content/install/: docker-compose.md  helm.md  index.md  postgresql-docker-compose.md
documentation/content/reference/: api-overview.md  environment-variables.md  helm-chart-reference.md  index.md
documentation/content/troubleshooting/: deployment-and-startup.md  index.md
documentation/content/tutorials/: first-application-workflow.md  index.md
documentation/src/: index.md
documentation/src/css/: custom.css
(+302 files in other folders)
