[project]
name = "tarnished-backend"
version = "0.1.0"
description = "Job application tracker API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "greenlet>=3.0.0",
    "email-validator>=2.0.0",
    "aiofiles>=25.1.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.0",
    "litellm>=1.81.11",
    "readability-lxml>=0.8.4.1",
    "markdownify>=1.2.2",
    "pillow>=12.1.1",
    "cairosvg>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "black>=26.1.0",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults (FastAPI Depends pattern)
    "E712",   # == True comparisons (SQLAlchemy requires this in queries)
    "E711",   # == None comparisons (SQLAlchemy requires this in queries)
    "E402",   # module level import not at top (conditional imports)
    "B904",   # raise ... from (verbose for HTTPException conversions)
    "UP035",  # typing.List deprecated (cosmetic)
    "UP042",  # StrEnum (cosmetic, Python 3.11+)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B017",   # blind exception (common in tests)
    "F841",   # unused variable (common in tests)
    "SIM117", # nested with statements (readable in tests)
]
"seed_*.py" = [
    "B007",   # unused loop variable
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test (normal in pytest)
