[project]
name = "tarnished-docs"
version = "0.1.0"
description = "Documentation site for Tarnished"
requires-python = ">=3.12"
dependencies = [
  "mkdocs>=1.6.1,<2.0.0",
  "mkdocs-material>=9.6.0,<10.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
